fixing scrollbar issue + visual adjustments / new colors

--- a/styles/base.css
+++ b/styles/base.css
@@ -4,11 +4,14 @@
 
 /* Variables */
 :root {
-    --primary-color: #F5F3F5;
-    --secondary-color: #d1d1d1;
+    --primary-color: #e7ddcf;
+    --secondary-color: #a8a49b;
     --3d-shadow: 0 1px 0 #b1b1b1, 0 2px 0 #a7a7a7, 0 3px 0 #999999, 0 4px 0 #9b9b9b, 0 5px 0 #888888, 0 6px 1px rgba(0, 0, 0, .1), 0 0 5px rgba(0, 0, 0, .1), 0 1px 3px rgba(0, 0, 0, .3), 0 3px 5px rgba(0, 0, 0, .2), 0 5px 10px rgba(0, 0, 0, .25), 0 10px 10px rgba(0, 0, 0, .2), 0 20px 20px rgba(0, 0, 0, .15);
     --text-color: #fff;
     --border-color: #fff;
+    --background-color: #0000008e;
+    --highlight-color: #f5751f;
+    --highlight-color-translucent: #f5751f93;
     --primary-font: 'Roboto', sans-serif;
 }
 
