--- a/styles/liststyles.css
+++ b/styles/liststyles.css
@@ -13,70 +13,54 @@ ul {
 .list-container {
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: stretch;
     overflow: visible;
+    list-style-type: disc;
 }
 
 /* Style each list item */
 .list-item {
-    background-color: rgba(36, 22, 53, 0.74);
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px;
+    color: var(--primary-color);
+    font-size: large;
+    padding: 5px;
+    margin: 5px;
     width: fit-content;
     text-align: left;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transform: translateX(0);
     opacity: 1;
     transition: transform 0.3s, opacity 0.3s;
     overflow: visible;
 }
 
-/* Add hover effect */
-.list-item:hover {
-    transform: translateX(10px);
-    z-index: 10;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+.list-item {
+    opacity: 0;
+    animation: none;
+    /* Starts items with no animation */
 }
 
-/* Add animation for list items */
-.list-item:nth-child(odd) {
-    animation: slideFromLeft 0.5s ease-in-out;
-}
-
-.list-item:nth-child(even) {
-    animation: slideFromRight 0.5s ease-in-out;
+.list-item.animated {
+    /* This is removed and re-added in the projectdetails.js to reset the animation, an animation delay gets added as well */
+    animation: fadeIn 0.5s ease-in-out forwards;
 }
 
 /* Add styles for the sub-list */
 .sub-list {
     margin-left: 20px;
     margin-right: 20px;
-    list-style: none;
+    list-style-type: circle;
 }
 
 /* Style each list item */
 .sub-list-item {
-    background-color: rgba(36, 22, 53, 0.342);
-    border: 1px solid #ccc;
-    font-size: small;
+    font-size: medium;
+    color: var(--secondary-color);
     padding: 5px;
     margin: 5px;
     width: fit-content;
     text-align: left;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transform: scale(1, 1);
     opacity: 1;
-    transition: transform 0.3s, opacity 0.3s;
     overflow: visible;
-}
-
-/* Add hover effect */
-.sub-list-item:hover {
-    transform: scale(1.3, 1.3);
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
 
 /* Style the link within the list item */
@@ -93,6 +77,6 @@ ul {
 
 /* Change link color on hover */
 .list-item a:hover {
-    color: #ff5733;
-    /* Change the link text color on hover */
+    background-color: #e8e8e8;
+    color: #333;
 }
