--- a/styles/portfoliodetails.css
+++ b/styles/portfoliodetails.css
@@ -1,6 +1,5 @@
 @import url("base.css");
 
-
 /* Portfolio Details Section */
 .portfolio-detail {
     display: none;
@@ -11,21 +10,20 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0, 0, 0, 0.8);
     backdrop-filter: blur(10px);
 }
 
 .detail-content {
-    background-image: linear-gradient(rgba(83, 78, 97, 0.4), rgba(100, 111, 154, 0.233));
+    background-image: linear-gradient(rgba(190, 137, 115, 0.658), rgba(100, 111, 154, 0.233));
     color: #fff;
     margin: 10vh auto;
     padding: 30px;
-    border: 1px solid #888;
-    width: 80%;
+    width: 90vw;
     height: 80vh;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
     border-radius: 10px;
     pointer-events: auto;
@@ -33,12 +31,12 @@
 
 .project-detail b {
     font-weight: bold;
-    color: rgb(104, 88, 245)
+    color: var(--highlight-color);
 }
 
 .project-detail strong {
     font-weight: bold;
-    color: rgb(88, 130, 245)
+    color: var(--highlight-color);
 }
 
 .project-detail-video-section {
@@ -58,8 +56,6 @@
     /* Rounded corners */
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
     /* Subtle shadow */
-    border: 3px solid rgba(50, 18, 136, 0.6);
-    /* Border color matching the gradient */
 }
 
 .play-overlay {
@@ -70,7 +66,7 @@
     font-size: 2em;
     cursor: pointer;
     color: #fff;
-    background: rgba(86, 51, 184, 0.8);
+    background: var(--highlight-color);
     border-radius: 50%;
     padding: 10px 20px;
     transition: background 0.3s ease;
@@ -140,11 +136,12 @@
     transform: scale(1);
     transition: flex-basis 0.5s ease, opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: stretch;
+    justify-content: start;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+    max-height: 75vh;
 }
 
 /* Style the scrollbar track */
@@ -156,7 +153,15 @@
 
 /* Style the scrollbar thumb (the draggable part) */
 .text-section::-webkit-scrollbar-thumb {
-    background-color: rgba(181, 91, 241, 0.425);
+    background-color: var(--highlight-color-translucent);
+    /* Semi-transparent background color */
+    border-radius: 10px;
+    /* Round the corners */
+}
+
+/* Style the scrollbar thumb (the draggable part) */
+.text-section::-webkit-scrollbar-thumb:hover {
+    background-color: var(--highlight-color);
     /* Semi-transparent background color */
     border-radius: 10px;
     /* Round the corners */
@@ -169,20 +174,19 @@
 }
 
 .project-detail {
-    background: rgba(50, 18, 136, 0.6);
+    background: rgba(16, 26, 28, 0.44);
     border-radius: 5px;
     margin-bottom: 1em;
     border: none;
     overflow: hidden;
     transition: background 0.3s ease, transform 1s ease;
+    align-self: start;
+    /* Starts content at the top */
+    overflow-y: auto;
+    /* Enables scrolling within the element */
     flex-grow: 0;
     flex-shrink: 0;
     width: 100%;
-}
-
-.project-detail:hover {
-    background: rgba(50, 18, 136, 0.7);
-    transform: translateX(10px);
 }
 
 .project-detail[open] {
@@ -193,17 +197,6 @@
 .project-detail:not([open]) {
     background: none;
     /* Reset the background for the folded state */
-}
-
-
-.project-detail-everslaught1[open] {
-    background-image: url('resources/Everslaught_Ship.png');
-    background-size: cover;
-}
-
-.project-detail-everslaught2[open] {
-    background-image: url('resources/Everslaught_Ship2.png');
-    background-size: cover;
 }
 
 .project-detail summary {
@@ -222,7 +215,7 @@
 }
 
 .project-detail summary:hover {
-    background: rgba(100, 111, 154, 0.6);
+    background: rgba(100, 111, 154, 0.7);
     /* Darken the background slightly on hover */
 }
 
@@ -230,7 +223,6 @@
 .project-detail p {
     margin: 0;
     padding: 1em;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
     background: rgba(50, 18, 136, 0.2);
     overflow: hidden;
     transition: transform 10s ease;
@@ -240,8 +232,6 @@
     margin: 0;
     padding: 1em;
     padding-left: 2em;
-    border-top: 1px solid rgba(255, 255, 255, 0.1);
-    background: rgba(50, 18, 136, 0.2);
     overflow: hidden;
 }
 
